--- a/main.ipynb
+++ b/main.ipynb
@@ -96,6 +96,7 @@
     "DATE = '([0 ][1-9]|[12][0-9]|3[01])'\n",
     "TIME = '([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]'\n",
     "\n",
+    "# rules for parsing logs\n",
     "rules = {\n",
     "    'boot.log(\\.\\d+)?': UnixLogs,\n",
     "}\n"
@@ -1589,17 +1590,11 @@
    "source": [
     "import os, os.path, pathlib\n",
     "\n",
-    "LOG_DIR = 'var'\n",
+    "LOG_DIR = 'hnet-hon-var-log-02282006'\n",
     "\n",
-    "errors = []\n",
-    "valid = []\n",
-    "\n",
-    "i=0\n",
     "for root, dirs, files in os.walk(LOG_DIR):\n",
     "    for file in files:\n",
-    "        if i == 100:\n",
-    "            break\n",
-    "        print(os.path.join(root, file))\n",
+    "        # skip files with weird encoding or compressed files\n",
     "        try:\n",
     "            logs = read_logs(os.path.join(root, file))\n",
     "        except UnicodeDecodeError:\n",
@@ -1614,17 +1609,6 @@
     "            continue\n",
     "\n",
     "        print(*logs, sep='\\n')\n",
-    "        i+=1\n",
-    "\n",
-    "with open('errors.txt', 'w') as f:\n",
-    "    for error in errors:\n",
-    "        f.write(f'{error}\\n')\n",
-    "\n",
-    "# with open('valid.txt', 'w') as f:\n",
-    "#     for log in valid:\n",
-    "#         f.write(f'{log}\\n')\n",
-    "\n",
-    "\n",
     "\n"
    ],
    "metadata": {
